updated xp-relic-sound plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
+displayName=XP Relic Sound
+author=DaBolink
 support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+description=Has a chance while skilling to play the relic unlock sound
+tags=relic,training
+plugins=com.dabolink.XPRelicSoundPlugin
